--- a/demos.html
+++ b/demos.html
@@ -16,6 +16,7 @@
     <a href="index.html">Home</a>
     <a href="essays.html">Essays</a>
     <a href="archive.html">Archive</a>
+    <a href="questions.html">Questions</a>
 </nav>
 
 <section>
