--- a/demos.html
+++ b/demos.html
@@ -14,6 +14,7 @@
 
 <nav>
     <a href="index.html">Home</a>
+    <a href="demos.html">Demos</a>
     <a href="essays.html">Essays</a>
     <a href="archive.html">Archive</a>
     <a href="questions.html">Questions</a>
