--- a/demos.html
+++ b/demos.html
@@ -3,30 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Demos</title>
     <link rel="stylesheet" href="styles.css">
-    <title>Your Site Title - Demos</title>
-    <!-- Same styles as index.html -->
 </head>
 <body>
 
 <header>
-    <h1>Kev Net</h1>
+    <h1>Your Site Title</h1>
 </header>
 
 <nav>
     <a href="index.html">Home</a>
-    <a href="demos.html">Demos</a>
+    <a href="demos.html" class="current">Demos</a>
     <a href="essays.html">Essays</a>
     <a href="questions.html">Questions</a>
 </nav>
 
 <section>
     <h2>Demos</h2>
-    <!-- Add your demo content here -->
+    <!-- Replace the VIDEO_ID with the ID of your YouTube video -->
     <div class="video-container">
-   <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/8JuRPhLP3L8?si=2UOScKwIb4WwJ1GQ" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/8JuRPhLP3L8?si=2UOScKwIb4WwJ1GQ" frameborder="0" allowfullscreen></iframe>
     </div>
-    <!-- Add more demos as needed -->
 </section>
 
 <footer>
