--- a/questions.html
+++ b/questions.html
@@ -16,7 +16,7 @@
     <a href="index.html">Home</a>
     <a href="demos.html">Demos</a>
     <a href="essays.html">Essays</a>
-    <a href="questions.html">Questions</a>
+    <a href="questions.html">Questions class="current"</a>
 </nav>
 
 <section>
