--- a/demos.html
+++ b/demos.html
@@ -23,7 +23,7 @@
     <h2>Demos</h2>
     <!-- Replace the VIDEO_ID with the ID of your YouTube video -->
     <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/8JuRPhLP3L8?si=2UOScKwIb4WwJ1GQ" frameborder="0" allowfullscreen></iframe>
+        <iframe <object width ="361" height="25"> src="https://www.youtube.com/embed/8JuRPhLP3L8?si=2UOScKwIb4WwJ1GQ" frameborder="0" <param name="allowFullScreen" value="false">></iframe>
     </div>
 </section>
 
