--- a/demos.html
+++ b/demos.html
@@ -21,9 +21,9 @@
 
 <section>
     <h2>Demos</h2>
-    <!-- Replace the VIDEO_ID with the ID of your YouTube video -->
-    <div class="video-container">
-        <iframe <object width ="361" height="25"> src="https://www.youtube.com/embed/8JuRPhLP3L8?si=2UOScKwIb4WwJ1GQ" frameborder="0" <param name="allowFullScreen" value="false">></iframe>
+    <!-- Replace the VIDEO_ID with the ID of your YouTube audio video -->
+    <div class="audio-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/8JuRPhLP3L8?si=2UOScKwIb4WwJ1GQautoplay=1&loop=1&controls=1&rel=0&audio_only=1" frameborder="0" allowfullscreen></iframe>
     </div>
 </section>
 
@@ -33,4 +33,3 @@
 
 </body>
 </html>
-
