--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </header>
 
 <nav>
-    <a href="index.html" class="current" Home</a>
+    <a href="index.html" class="current"> Home</a>
     <a href="demos.html">Demos</a>
     <a href="essays.html">Essays</a>
     <a href="questions.html">Questions</a>
