--- a/essays.html
+++ b/essays.html
@@ -16,7 +16,7 @@
 <nav>
     <a href="index.html">Home</a>
     <a href="demos.html">Demos</a>
-    <a href="essays.html" class="current">Essays</a>
+    <a href="essays.html">Essays</a>
     <a href="questions.html">Questions</a>
 </nav>
 
