--- a/demos.html
+++ b/demos.html
@@ -14,7 +14,7 @@
 
 <nav>
     <a href="index.html">Home</a>
-    <a href="demos.html" class="current">Demos</a>
+    <a href="demos.html">Demos</a>
     <a href="essays.html">Words</a>
     <a href="questions.html">Questions</a>
 </nav>
