--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <nav>
     <a href="index.html"> Home</a>
     <a href="demos.html">Demos</a>
-    <a href="essays.html">Words</a>
+    <a href="essays.html">Essays</a>
     <a href="questions.html">Questions</a>
 </nav>
 
