--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 </nav>
 
 <section>
-    <h2>Welcome to Your Site</h2>
-    <p>This is the home page of your website. You can navigate to other pages using the links above.</p>
+    <h2>Welcome to Kev Net</h2>
+    <p>This is the home page of Kev Net. You can navigate to other pages of Kev Net using the links above.</p>
 </section>
 
 <footer>
