--- a/demos.html
+++ b/demos.html
@@ -15,7 +15,7 @@
 <nav>
     <a href="index.html">Home</a>
     <a href="demos.html">Demos</a>
-    <a href="essays.html">Words</a>
+    <a href="essays.html">Essays</a>
     <a href="questions.html">Questions</a>
 </nav>
 
@@ -28,7 +28,7 @@
 </section>
 
 <footer>
-    <p>&copy; 2024 Your Site Name</p>
+    <p>&copy; 2024 Kev Net</p>
 </footer>
 
 </body>
