--- a/questions.html
+++ b/questions.html
@@ -29,7 +29,7 @@
 </section>
 
 <footer>
-    <p>&copy; 2024 Your Site Name</p>
+    <p>&copy; 2024 Kev Net</p>
 </footer>
 
 <!-- Script to handle form submission -->
